# drake

./: .gitignore
common/: symbolic_expression.cc  symbolic_expression.h
common/test_utilities/: BUILD.bazel
examples/pendulum/: BUILD.bazel  region_of_attraction.cc
examples/pendulum/funnel_library/: BUILD.bazel  README.md  dircol_optimize.h  lqr_stabilize.h  lti_roa.h  simulate.cc
examples/pendulum/funnel_library/tvlqr/: tvlqr.cc  tvlqr.h
examples/tailsitter/: BUILD.bazel  Tailsitter.urdf  common.h  external_spatial_force_multiplexer.cc  external_spatial_force_multiplexer.h  fixed_state_roa.h  flat_wing.cc  foo_plot.cc  hover_tailsitter.cc  make_tailsitter_plant.h  perch_tailsitter.cc  plot_util.h  run_tailsitter_dircol.cc  swing_up_pendulum.cc  symbolic_tailsitter.cc  tailsitter_controller.h  tailsitter_geometry.h  tailsitter_input.named_vector  tailsitter_input_named_vector.yaml  tailsitter_parameters.h  tailsitter_plant.cc  tailsitter_plant.h  tailsitter_state.named_vector  tailsitter_state_named_vector.yaml  trajectory_funnel.h  trajectory_generator.h  trajectory_optimizer.h
examples/tailsitter3d/: BUILD.bazel  external_spatial_force_multiplexer.h  flat_wing.cc  flat_wing.h  hover_tailsitter.cc  make_tailsitter_plant.h
multibody/plant/: BUILD.bazel
setup/mac/binary_distribution/: Brewfile
setup/mac/source_distribution/: Brewfile
solvers/: sos_basis_generator.h
systems/analysis/: region_of_attraction.cc  region_of_attraction.h
systems/controllers/: finite_horizon_linear_quadratic_regulator.cc
tools/workspace/: pkg_config.bzl
tools/workspace/vtk/: repository.bzl
