# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "flat_wing",
    srcs = ["flat_wing.cc"],
    hdrs = ["flat_wing.h"],
    deps = [
        "//multibody/plant:plant",
    ],
)

drake_cc_library(
    name = "external_spatial_force_multiplexer",
    hdrs = ["external_spatial_force_multiplexer.h"],
    srcs = ["external_spatial_force_multiplexer.cc"],
    deps = ["//multibody/plant:plant"],
)

drake_cc_library(
    name = "tailsitter_plant",
    srcs = [
        "tailsitter_plant.cc"
    ],
    hdrs = ["tailsitter_plant.h", 
        "tailsitter_parameters.h"],
    deps = [
        ":external_spatial_force_multiplexer",
        ":flat_wing",
        "//multibody/plant:plant",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:linear_system",
    ],
)

drake_cc_binary(
    name = "hover_tailsitter",
    srcs = ["hover_tailsitter.cc"],
    deps = [
        ":flat_wing",
        ":tailsitter_plant",
        "//geometry:geometry_visualization",
        "//geometry:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/controllers:linear_quadratic_regulator",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "symbolic_tailsitter",
    srcs = ["symbolic_tailsitter.cc"],
    deps = [
        ":tailsitter_plant",
        "@gflags",
    ],
)
